refactor: standardize "active" field naming across entities and repositories, update initializers and queries accordingly